[gd_scene load_steps=8 format=2]

[ext_resource path="res://main_scenes/game/game_preview/game_preview.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_scenes/level_button/level_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_scenes/tile/themes/tile_halloween.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_scenes/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://main_scenes/tile/themes/tile_neon.tscn" type="PackedScene" id=5]
[ext_resource path="res://main_scenes/theme_button/theme.tscn" type="PackedScene" id=6]
[ext_resource path="res://main_scenes/tile/tile.tscn" type="PackedScene" id=7]

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="GamePreview" parent="." instance=ExtResource( 1 )]
tile_scene = ExtResource( 3 )
tick_rate = 0.25

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Canvas"]
margin_top = -1.0
margin_right = 1023.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/MarginContainer"]
margin_right = 1023.0
margin_bottom = 598.0

[node name="Menu" type="VBoxContainer" parent="Canvas/MarginContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="Button" parent="Canvas/MarginContainer/HBoxContainer/Menu"]
margin_right = 200.0
margin_bottom = 196.0
size_flags_vertical = 3
text = "Niveaux"

[node name="Themes" type="Button" parent="Canvas/MarginContainer/HBoxContainer/Menu"]
margin_top = 200.0
margin_right = 200.0
margin_bottom = 397.0
size_flags_vertical = 3
text = "Th√®mes"

[node name="Exit" type="Button" parent="Canvas/MarginContainer/HBoxContainer/Menu"]
margin_top = 401.0
margin_right = 200.0
margin_bottom = 598.0
size_flags_vertical = 3
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="VBoxContainer" parent="Canvas/MarginContainer/HBoxContainer"]
visible = false
margin_left = 204.0
margin_right = 404.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_bottom = 59.0
text = "Niveau 1"
grid_size = 3

[node name="Level2" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 63.0
margin_bottom = 123.0
text = "Niveau 2"
grid_size = 4
level_type = 1

[node name="Level3" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 127.0
margin_bottom = 186.0
text = "Niveau 3"
grid_size = 7

[node name="Level4" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 190.0
margin_bottom = 250.0
text = "Niveau 4"
grid_size = 4
difficulty = 3

[node name="Level5" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 254.0
margin_bottom = 313.0
text = "Niveau 5"
grid_size = 10
level_type = 1

[node name="Level6" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 317.0
margin_bottom = 377.0
text = "Niveau 6"
grid_size = 4
level_type = 3

[node name="Level7" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 381.0
margin_bottom = 441.0
text = "Niveau 6"
grid_size = 6
level_type = 2

[node name="Level8" parent="Canvas/MarginContainer/HBoxContainer/Levels" instance=ExtResource( 2 )]
margin_top = 445.0
margin_bottom = 504.0
text = "Niveau 7"
grid_size = 8
difficulty = 4
level_type = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/MarginContainer/HBoxContainer/Levels"]
margin_top = 508.0
margin_right = 200.0
margin_bottom = 598.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="Play" type="Button" parent="Canvas/MarginContainer/HBoxContainer/Levels/HBoxContainer"]
margin_right = 98.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "Jouer"

[node name="Return" type="Button" parent="Canvas/MarginContainer/HBoxContainer/Levels/HBoxContainer"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "Retour"

[node name="Themes" type="VBoxContainer" parent="Canvas/MarginContainer/HBoxContainer"]
visible = false
margin_left = 204.0
margin_right = 404.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 0 )

[node name="Theme" parent="Canvas/MarginContainer/HBoxContainer/Themes" instance=ExtResource( 6 )]
margin_right = 200.0
margin_bottom = 146.0
text = "Basique"
tile_scene = ExtResource( 7 )

[node name="Theme2" parent="Canvas/MarginContainer/HBoxContainer/Themes" instance=ExtResource( 6 )]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 297.0
text = "Neon"
tile_scene = ExtResource( 5 )

[node name="Theme3" parent="Canvas/MarginContainer/HBoxContainer/Themes" instance=ExtResource( 6 )]
margin_top = 301.0
margin_right = 200.0
margin_bottom = 447.0
text = "Halloween"
tile_scene = ExtResource( 3 )

[node name="Return" type="Button" parent="Canvas/MarginContainer/HBoxContainer/Themes"]
margin_left = 102.0
margin_top = 508.0
margin_right = 200.0
margin_bottom = 598.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
text = "Retour"
[connection signal="pressed" from="Canvas/MarginContainer/HBoxContainer/Menu/Levels" to="." method="open_levels_menu"]
[connection signal="pressed" from="Canvas/MarginContainer/HBoxContainer/Menu/Themes" to="." method="open_themes_menu"]
[connection signal="pressed" from="Canvas/MarginContainer/HBoxContainer/Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level2" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level3" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level4" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level5" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level6" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level7" to="GamePreview" method="_on_set_level"]
[connection signal="level_selected" from="Canvas/MarginContainer/HBoxContainer/Levels/Level8" to="GamePreview" method="_on_set_level"]
[connection signal="pressed" from="Canvas/MarginContainer/HBoxContainer/Levels/HBoxContainer/Play" to="." method="_on_play"]
[connection signal="pressed" from="Canvas/MarginContainer/HBoxContainer/Levels/HBoxContainer/Return" to="." method="open_main_menu"]
[connection signal="theme_selected" from="Canvas/MarginContainer/HBoxContainer/Themes/Theme" to="GamePreview" method="_on_theme_selected"]
[connection signal="theme_selected" from="Canvas/MarginContainer/HBoxContainer/Themes/Theme2" to="GamePreview" method="_on_theme_selected"]
[connection signal="theme_selected" from="Canvas/MarginContainer/HBoxContainer/Themes/Theme3" to="GamePreview" method="_on_theme_selected"]
[connection signal="pressed" from="Canvas/MarginContainer/HBoxContainer/Themes/Return" to="." method="open_main_menu"]
